--- a/index.html
+++ b/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible" content="ie-edge">
-        <title>Hora do Dia</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body onload="carregar()">
-        <header>
-            <h1>Hora do Dia</h1>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <title>Treino01</title>
+</head>
+<body onload="carregar()">
+    <header><h1>Hora Certa</h1></header>
+    <section>
+        <div id="msg">
+            msg
+        </div>
 
-        <section>
-            <div id="msg">
-                Aqui vai aparecer a mensagem...
-            </div>
-                
-            <div id="foto">
-               <img id="image" src="images/manha.png" alt="manha">
-            </div>
-        </section>
-
-        <footer>
-            <p>&copy; TellesJr</p>
-        </footer>
-        <script src="script.js"></script>
-    </body>
-
+        <div id="image">
+            <img id="img" src="images/noite.png" alt="image">
+        </div>
+    </section>
+    <footer>&copy; TellesJr</footer>
+</body>
 </html>
